Fixed stripview bg color Fixed stripview not resizing after fullscreen Fixed navbar not centered Renamed setDisplayMode -> setLayoutMode

--- a/internal/util/assets/index.css
+++ b/internal/util/assets/index.css
@@ -20,6 +20,10 @@ button {
     border: solid 1px rgba(0,0,0,0);
 }
 
+box {
+    background-color: #000000;
+}
+
 .nav-btn {
     background-image:none;
     background-color: rgba(0,0,0,0.49); 
